--- a/app/main/mutations.html
+++ b/app/main/mutations.html
@@ -11,7 +11,7 @@
 </div>
 <footer>
     <script>
-        const render = require("../.compiled/renderer.bundle.js").default.index;
+        const render = require("../.compiled/renderer.bundle.js").default.mutations;
         render();
 
         // Add React dev tools in development. 
