Style editor, refactoring some base components (#58)

--- a/app/main/index.html
+++ b/app/main/index.html
@@ -5,6 +5,7 @@
     <title>Hi</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="../../node_modules/draft-js/dist/Draft.css" />
 </head>
 <div id="root">
     <!-- React goes here -->
